--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastly-test",
   "version": "1.0.0",
-  "main": "public/index.js",
+  "main": "public/hello.js",
   "license": "MIT",
   "engines": {
     "node": "12.x"
