--- a/now.json
+++ b/now.json
@@ -1,6 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/serverless.ts",
+      "use": "@now/node",
+      "config": {
+        "helpers": false
+      }
+    }
+  ],
   "routes": [
-    { "src": "/.*", "dest": "/api/index.js"}
+    { "src": "/.*", "dest": "/api/serverless.ts"}
   ]
 }
