--- a/now.json
+++ b/now.json
@@ -1,15 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/serverless.ts",
-      "use": "@now/node",
-      "config": {
-        "helpers": false
-      }
-    }
-  ],
-  "routes": [
-    { "src": "/.*", "dest": "/api/serverless.ts"}
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "api/serverless.ts",
+            "use": "@now/node",
+            "config": {
+                "helpers": false
+            }
+        }
+    ],
+    "routes": [{ "src": "/.*", "dest": "/api/serverless.ts" }]
 }
