--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "fastly-test",
-  "version": "1.0.0",
-  "license": "MIT",
-  "engines": {
-    "node": "12.x"
-  },
-  "dependencies": {
-    "fastify": "^2.11.0"
-  },
-  "devDependencies": {
-    "@types/node": "^13.5.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  }
+    "name": "fastly-test",
+    "version": "1.0.0",
+    "license": "MIT",
+    "engines": {
+        "node": "12.x"
+    },
+    "scripts": {
+        "lint:ts": "eslint ./api/**/*.ts --cache",
+        "lint:json": "prettier '*.json'",
+        "lint:fix:ts": "yarn lint:ts --fix",
+        "lint:fix:json": "yarn lint:json --write",
+        "lint": "run-p -l -n -c --aggregate-output lint:*",
+        "lint:fix": "run-p -l -n -c --aggregate-output lint:fix:*"
+    },
+    "dependencies": {
+        "fastify": "^2.11.0"
+    },
+    "devDependencies": {
+        "@now/node": "^1.4.0",
+        "@types/node": "^13.5.3",
+        "@typescript-eslint/eslint-plugin": "^2.18.0",
+        "@typescript-eslint/parser": "^2.18.0",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^1.19.1",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.7.5",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
+    }
 }
