--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-prettier": "^3.1.2",
+        "husky": "^4.2.1",
+        "lint-staged": "^10.0.7",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.19.1",
         "ts-loader": "^6.2.1",
