--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,5 @@ insert_final_newline = false
 max_line_length = 120
 tab_width = 4
 
-[{.eslintrc,bowerrc,.prettierrc,.babelrc,jest.config,.stylelintrc,*.jsb3,*.jsb2,*.graphqlconfig,*.json}]
+[{.eslintrc,bowerrc,.prettierrc,.babelrc,jest.config,.stylelintrc,*.jsb3,*.jsb2,*.graphqlconfig}]
 indent_size = 2
