--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "typecheck": "tsc --noEmit",
         "lint:ts": "eslint ./api/**/*.ts --cache",
-        "lint:json": "prettier '*.json'",
+        "lint:json": "prettier \"*.json\"",
         "lint:fix:ts": "yarn lint:ts --fix",
         "lint:fix:json": "yarn lint:json --write",
         "lint": "run-p -l -n -c --aggregate-output lint:*",
